# ds

./: .gitignore
algorithms/: binarysearch.h
binarysearch/: CMakeLists.txt  test.cpp
